--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-Make the basic graphics work
-Make the text thing work
+X Make the basic graphics work
+X Make the text thing work
 Pull state upwards into a gameState object
