--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,4 @@ X Make the basic graphics work
 X Make the mouse draw thing work
 
 Lift state upwards into a GameState object, instead of passing references to a mutable Settings object
-Understand why pygame is throwing pygame.WINDOWCLOSE instead of pygame.QUIT
+Fix pygame throwing pygame.WINDOWCLOSE instead of pygame.QUIT
